--- a/public/css/buttons.css
+++ b/public/css/buttons.css
@@ -1,15 +1,16 @@
 .primary-button {
-    margin-top: 6.4rem;
+    margin-top: 10px;
+    font-size: 18px;
   
     width: 100%;
-    height: 6.4rem;
+    height: 80px;
     border: 0;
   
     cursor: pointer;
   
     background: #3cdc8c;
   
-    border-radius: 2rem;
+    border-radius: 10px;
     color: white;
   
     display: flex;
@@ -19,6 +20,7 @@
     transition: background-color 0.2s;
 
     text-decoration: none;
+
   }
   
   .primary-button:hover {
