--- a/public/css/page-create-orphanage.css
+++ b/public/css/page-create-orphanage.css
@@ -21,6 +21,20 @@ main {
     border-radius: 0 0 20px 20px;
 }
 
+.input-block {
+    font-size: 30px;
+}
+
+.title {
+    text-align: center;
+}
+
+.not-active {
+    pointer-events: none;
+    cursor: default;
+    text-decoration: none;
+  }
+
 
 
 
